# ProjectLearnOpenGL

./: .gitignore  CMakeLists.txt  LICENSE  README.md
res/shaders/: fragment_shader_with_tex_coord.fs  simplest_fragment_shader.fs  simplest_vertex_shader.vs  vertex_shader_with_mvp.vs  vertex_shader_with_tex_coord.vs
src/0.test_case/: CMakeLists.txt  draw_triangle.cpp  main.cpp  test_texture.cpp  test_transformation.cpp
src/0.test_case/utils/: Shader.cpp  Shader.h
